# Anthorpic_design_pattern

parallelization/: README.md  crewai_flow.html  pyproject.toml
parallelization/src/parallelization/: main.py  p3_and.py  test.py
prompt_chaining/: .env  README.md  crewai_flow.html  outline.md  outline.txt  pyproject.toml
prompt_chaining/src/prompt_chaining/: __init__.py  prompt.py  testing.py
workflow_routing/: .env  README.md  crewai_flow.html  pyproject.toml  tech_outline.md
workflow_routing/src/workflow_routing/: __init__.py  route.py
